tests/paczka1/fuzzy1/94822690.err
Error in line 6: Nw0kn5qP A362 28,77
Error in line 13: PhfZJo A362 73,1
Error in line 21: S272 A861 66,46
Error in line 17: PhfZJo A861 74,0
Error in line 23: GPNJqy S200 67,0
Error in line 33: xNj8L6 A362 29,1
Error in line 24: S272 A861 309,0
